Fix: switch gap values

--- a/component-library/components/generic/component-heading/component-heading.scss
+++ b/component-library/components/generic/component-heading/component-heading.scss
@@ -1,6 +1,6 @@
 .c-component-heading {
   display: grid;
-  gap: 0.25rem;
+  gap: 0.5rem;
   font-family: var(--font-family);
   font-weight: var(--font-weight-headings);
   line-height: var(--line-height);
