--- a/component-library/components/simple/card/card.scss
+++ b/component-library/components/simple/card/card.scss
@@ -12,6 +12,6 @@
     }
 
     .c-component-heading {
-        gap: 0.5rem;
+        gap: 0.25rem;
     }
 }
